Added function to open database

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Imports: 
     magrittr,
-    shiny
+    shiny,
+    DBI,
+    RSQLite
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
